crates/weaver-e2e/tests/snapshots/grep_snapshots__grep_rust_dbg_macro.snap
---
source: crates/weaver-e2e/tests/grep_snapshots.rs
expression: matches
---
[
    MatchSnapshot {
        text: "dbg!(x)",
        start: (
            4,
            5,
        ),
        end: (
            4,
            12,
        ),
        captures: {
            "EXPR": "(x)",
        },
    },
    MatchSnapshot {
        text: "dbg!(y)",
        start: (
            5,
            5,
        ),
        end: (
            5,
            12,
        ),
        captures: {
            "EXPR": "(y)",
        },
    },
    MatchSnapshot {
        text: "dbg!(x + 1)",
        start: (
            6,
            5,
        ),
        end: (
            6,
            16,
        ),
        captures: {
            "EXPR": "(x + 1)",
        },
    },
]
